[gd_scene load_steps=2 format=2]

[ext_resource path="res://strips/GameOver.gd" type="Script" id=1]

[node name="GameOver" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -72, -64, -72, 640, 1088, 640, 1088, -64 )
__meta__ = {
"_edit_lock_": true
}

[node name="GameOverLabel" type="Label" parent="."]
margin_left = 448.0
margin_top = 160.0
margin_right = 576.0
margin_bottom = 224.0
text = "Game Over"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Points" type="Label" parent="."]
margin_left = 448.0
margin_top = 224.0
margin_right = 576.0
margin_bottom = 288.0
text = "Score : "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" type="Button" parent="."]
margin_left = 448.0
margin_top = 352.0
margin_right = 576.0
margin_bottom = 384.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuLabel" type="Label" parent="MainMenuButton"]
margin_right = 128.0
margin_bottom = 32.0
text = "Main Menu"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="."]
margin_left = 448.0
margin_top = 288.0
margin_right = 576.0
margin_bottom = 320.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartLabel" type="Label" parent="RestartButton"]
margin_right = 128.0
margin_bottom = 32.0
text = "Restart"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
